--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -2,6 +2,7 @@
 	@import 'https://fonts.googleapis.com/css?family=Roboto';
 </style>
 
+
 <div class="row m0">
 	<md-card class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mtb10 p0 md-elevation-z12" *ngIf="MtJobs.length>0">
 		<md-card-content class="p0">
@@ -56,21 +57,22 @@
 					</thead>
 					<tbody class="orange50">
 						<tr *ngFor="let job of MtJobs" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
-							[class.bg-green]="job.Color==0">
+						 [class.bg-green]="job.Color==0">
 							<td>
-								<md-checkbox [(ngModel)]="job.Selected" name="job_selected" (change)="checkboxChanged(job,'MT')"></md-checkbox>
+								<md-checkbox [(ngModel)]="job.Selected" name="job_selected"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
 							<td [title]="job.OriginalFileName"> <a (click)="downloadAudioFile(job.AudioURL,job,'MT')" class="pointer"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
-							<td>{{job.Duration}}</td>
+							<td title="Total Minutes : {{job.TotalMinutes}}">{{job.Duration}}</td>
 							<td [title]="job.Client">{{job.ClientShortName}}</td>
 							<td>{{job.Doctor}}</td>
 							<td>{{job.AQA}}</td>
 							<td>{{job.QA}}</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT && (job.LevelStatus!='Completed' || job.JobLevel=='L1')" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'MT')"></span></td>
+							<td><span *ngIf="job.DT && (job.LevelStatus!='Completed' || job.JobLevel=='L1')" class="glyphicon glyphicon-cloud-upload pointer"
+								 (click)="uploadFile(job,'MT')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -134,15 +136,15 @@
 					</thead>
 					<tbody class="green50">
 						<tr *ngFor="let job of AqaJobs" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
-							[class.bg-green]="job.Color==0">
+						 [class.bg-green]="job.Color==0">
 							<td>
 								<md-checkbox [(ngModel)]="job.Selected" name="job_selected"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
-							<td [title]="job.OriginalFileName"> <a [href]="job.AudioURL"  class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'AQA')"> {{job.JobNumber}}</a></td>
+							<td [title]="job.OriginalFileName"> <a [href]="job.AudioURL" class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'AQA')"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
-							<td>{{job.Duration}}</td>
+							<td title="Total Minutes : {{job.TotalMinutes}}">{{job.Duration}}</td>
 							<td [title]="job.Client">{{job.ClientShortName}}</td>
 							<td>{{job.Doctor}}</td>
 							<td>{{job.MT}}
@@ -150,7 +152,8 @@
 							</td>
 							<td>{{job.QA}}</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT && job.MTUrl && job.LevelStatus!='Completed'" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'AQA')"></span></td>
+							<td><span *ngIf="job.DT && job.MTUrl && job.LevelStatus!='Completed'" class="glyphicon glyphicon-cloud-upload pointer"
+								 (click)="uploadFile(job,'AQA')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -214,15 +217,15 @@
 					</thead>
 					<tbody class="purple50">
 						<tr *ngFor="let job of QaJobs" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
-							[class.bg-green]="job.Color==0">
+						 [class.bg-green]="job.Color==0">
 							<td>
 								<md-checkbox [(ngModel)]="job.Selected" name="job_selected"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
-							<td [title]="job.OriginalFileName"> <a  class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'QA')"> {{job.JobNumber}}</a></td>
+							<td [title]="job.OriginalFileName"> <a class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'QA')"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
-							<td>{{job.Duration}}</td>
+							<td title="Total Minutes : {{job.TotalMinutes}}">{{job.Duration}}</td>
 							<td [title]="job.Client">{{job.ClientShortName}}</td>
 							<td>{{job.Doctor}}</td>
 							<td>{{job.MT}}
@@ -233,7 +236,8 @@
 								<a *ngIf="job.AQAUrl" (click)="getTranscriptFile(job,'QA',$event)"> <span class="glyphicon glyphicon-cloud-download pointer"></span></a>
 							</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT && ((job.AQA==null && job.MTUrl) || job.AQAUrl)" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'QA')"></span></td>
+							<td><span *ngIf="job.DT && ((job.AQA==null && job.MTUrl) || job.AQAUrl) && job.FullUploadAvailable" class="glyphicon glyphicon-cloud-upload pointer"
+								 (click)="uploadFile(job,'QA')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -271,7 +275,7 @@
 			<div>
 				<md-toolbar class="mbottom5 toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Patient Lists</span> <button md-raised-button class="pull-right btn-small" (click)="PatientListModal=!PatientListModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
-				</md-toolbar>			
+				</md-toolbar>
 				<ol *ngIf="SelectedJob.PatientList.length>0">
 					<li *ngFor="let patientList of SelectedJob.PatientList ;let i=index">
 						<a (click)="downloadFile(patientList)" class="pointer"> Patient List {{i+1}} </a>
@@ -290,41 +294,91 @@
 				<md-toolbar class="mbottom5 toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Upload File</span> <button md-raised-button class="pull-right btn-small" (click)="FileModal=!FileModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
-				<form (submit)="postJob()" #newDocForm>
+				<form (submit)="submitJob()" #newDocForm>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input-container>
+							<md-input-container> <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text"
+								 disabled></md-input-container>
 						</div>
 
-						<div class="col-md-5 col-sm-6 col-lg-5 col-xs-12">
-							<input #uploadEl type="file" ng2FileSelect [uploader]="uploader" name="trans_file" (change)="readFile($event)" required />
+						<md-radio-group name="uploadType" [(ngModel)]="UploadType" (change)="uploadTypeChanged()">
+							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12 radio-button-container">
+								<md-radio-button name="fileUpload" value="fileUpload">File Upload</md-radio-button>
+							</div>
+
+							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12 radio-button-container">
+								<md-radio-button value="folderUpload" name="folderUpload" ngDefaultControl>Folder Upload</md-radio-button>
+							</div>
+						</md-radio-group>
+
+						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12 file-input-container" *ngIf="UploadType=='fileUpload'">
+							<input #uploadEl type="file" ng2FileSelect [uploader]="uploader" name="trans_file" required />
 						</div>
-						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12 checkbox-container" *ngIf="SelectedJob.JobLevel!='QA' && SelectedJob.JobLevel!='L1'">
+
+						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12 file-input-container" *ngIf="UploadType=='folderUpload'">
+							<input #uploadEl type="file" name="trans_file" (change)="folderSelected($event)" required webkitdirectory directory multiple/>
+						</div>
+
+						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12 checkbox-container" *ngIf="(SelectedJob.JobWorkLevel!='QA' && SelectedJob.JobLevel!='L1') && UploadType">
 							<md-checkbox [(ngModel)]="IsPartialUpload" name="partial" [disabled]="this.SelectedJob.LevelStatus == 'Partial'">Partial Upload</md-checkbox>
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input-container>   <input mdInput class="" name="jobDuration" placeholder="Job Duration" [(ngModel)]="SelectedJob.Duration" type="text" disabled></md-input-container>
+							<md-input-container> <input mdInput class="" name="jobDuration" placeholder="Job Duration" [(ngModel)]="SelectedJob.Duration" type="text"
+								 disabled></md-input-container>
 						</div>
 
 
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input-container>   <input mdInput class="" required name="startTime" placeholder="Start Time" [(ngModel)]="PartialUploadStartTime" type="text"></md-input-container>
+							<md-input-container> <input mdInput class="" required name="startTime" placeholder="Start Time" [(ngModel)]="PartialUploadStartTime" type="text"></md-input-container>
 						</div>
 
 
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input-container>   <input mdInput class="" required name="endTime" placeholder="End Time" [(ngModel)]="PartialUploadEndTime" type="text"></md-input-container>
+							<md-input-container> <input mdInput class="" required name="endTime" placeholder="End Time" [(ngModel)]="PartialUploadEndTime" type="text"></md-input-container>
+						</div>
+
+						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12" *ngIf="SelectedJob.IsLastSplit">
+							<h3>Previous Splits</h3>
+							<div *ngFor="let split of PreviousSplitFiles">
+								<md-checkbox [(ngModel)]="split.Selected" [ngModelOptions]="{standalone: true}"></md-checkbox>
+								<span>{{split.SequenceNumber}}</span>
+								<span>{{split.Employee}}</span>
+								<span *ngIf="split.FileUrl" class="glyphicon glyphicon-cloud-download pointer" (click)="downloadFile(split.FileUrl)"></span>
+							</div>
+
 						</div>
 
 
 						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 center-align">
-							<button md-raised-button class="file-button btn-save" type="submit" value="Submit" [disabled]="uploader.queue.length<1">Submit </button>
+							<button md-raised-button class="file-button btn-save" type="submit" value="Submit" [disabled]="uploader.queue.length<1 && Files==null">Submit </button>
 						</div>
 
 					</div>
 
 				</form>
+
+				<div *ngIf="IsPartialUpload && ExistingPartialUploadFiles.length>0">
+					<h3 class="text-center">Previously Uploaded Partial Files</h3>
+					<table class="small_table light-blue50">
+						<thead class="purple200">
+							<tr table-header>
+								<th>Start Time</th>
+								<th>End Time</th>
+								<th>Upload Time</th>
+								<th>Partial File</th>
+							</tr>
+						</thead>
+						<tbody class="purple50">
+							<tr *ngFor="let file of ExistingPartialUploadFiles">
+								<td>{{file.StartTime}}</td>
+								<td>{{file.EndTime}}</td>
+								<td>{{file.UploadTime | date:'shortTime'}}</td>
+								<td title="{{file.PartialFile.split('/').pop()}}">{{file.PartialFile.split('/').pop()}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</md-card-content>
 	</md-card>
@@ -340,7 +394,7 @@
 				</md-toolbar>
 				<ol *ngIf="PartialDowloadDocuments.length>0">
 					<li *ngFor="let document of PartialDowloadDocuments">
-						<a (click)="downloadFile(document.DocumentURL)"> {{document.Name}} </a>
+						<a (click)="downloadFile(document.DocumentURL)" class="pointer"> {{document.Name}} </a>
 					</li>
 				</ol>
 				<h2 class="center-align" *ngIf="PartialDowloadDocuments.length==0">No Transcript Documents Available</h2>
