--- a/src/app/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/manager-dashboard/manager-dashboard.component.html
@@ -4,38 +4,38 @@
 
 <div class="row m0">
 
-	<md-card class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m0 mbottom5 p0 md-elevation-z12 text-white">
+	<md-card class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m0 p0 md-elevation-z12 text-white">
 		<md-card-content class="p0">
 			<div class="center-align">			
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-green1 white-text">
-          <h3 class="mbottom0 mtop5">NYS</h3>
+          <h3 class="mbottom0 mtop0">NYS</h3>
           <p class="mbottom0 f18">{{DailyStatistics.NotYetStarted}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.NYS}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.NYS}}</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-brown1 white-text">
-          <h3 class="mbottom0 mtop5">MT</h3>
+          <h3 class="mbottom0 mtop0">MT</h3>
           <p class="mbottom0 f18">{{DailyStatistics.JobsAtMt}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.MtJobs}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.MtJobs}}</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-orange1 white-text">
-          <h3 class="mbottom0 mtop5">AQA</h3>
+          <h3 class="mbottom0 mtop0">AQA</h3>
           <p class="mbottom0 f18">{{DailyStatistics.JobsAtAqa}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.AqaJobs}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.AqaJobs}}</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-lightblue1 white-text">
-          <h3 class="mbottom0 mtop5">QA</h3>
+          <h3 class="mbottom0 mtop0">QA</h3>
           <p class="mbottom0 f18">{{DailyStatistics.JobsAtQa}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.QaJobs}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.QaJobs}}</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-pink1 white-text">
-          <h3 class="mbottom0 mtop5">Completed</h3>
+          <h3 class="mbottom0 mtop0">Completed</h3>
           <p class="mbottom0 f18">{{DailyStatistics.Completed}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.CompletedJobs}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.CompletedJobs}}</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 bg-pruple1 white-text">
-          <h3 class="mbottom0 mtop5">Total</h3>
+          <h3 class="mbottom0 mtop0">Total</h3>
           <p class="mbottom0 f18">{{DailyStatistics.Total}}</p>
-          <p class="f18 mbottom5">{{DailyStatistics.TotalJobs}}</p>
+          <p class="f18 mbottom0">{{DailyStatistics.TotalJobs}}</p>
         </div>
 
 			</div>      
@@ -81,35 +81,36 @@
 
 				</div>
 			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs p0">
+			<div class="col-lg-12 col-md-12 col-sm-12 ofs p0">
 				<table>
 					<thead class="orange200">
 						<tr table-header>
-							<th>Date</th>
-							<th>Job No</th>
-							<th>Duration</th>
-							<th>Client</th>
-							<th>Doctor</th>
-							<th>MT</th>
-							<th>AQA</th>
-							<th>QA</th>
-							<th>TAT</th>
-							<th>Status</th>
+							<th style="width:85px">Date</th>
+							<th style="width:145px">Job No</th>
+							<th style="width:102px">Duration</th>
+							<th style="width:80px">Client</th>
+							<th style="width:150px">Doctor</th>
+							<th style="width:85px">Job Level</th>
+							<th style="width:163px">MT</th>
+							<th style="width:163px">AQA</th>
+							<th style="width:163px">QA</th>
+							<th style="width:65px">TAT</th>
+							<th style="width:65px">Status</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr *ngFor="let job of Jobs" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
-							[class.bg-green]="job.Color==0">
+						<tr *ngFor="let job of Jobs">
 							<td>{{job.JobDate}}</td>
 							<td>{{job.JobNumber}}</td>
-							<td>{{job.Duration}}</td>
+							<td title="Total Minutes : {{job.TotalMinutes}}">{{job.Duration}}</td>
 							<td title={{job.Client}}>{{job.ClientShortName}}</td>
 							<td>{{job.Doctor}}</td>
-							<td>{{job.MT}}</td>
-							<td>{{job.AQA}}</td>
-							<td>{{job.QA}}</td>
-							<td>{{job.TAT}}</td>
-							<td>{{job.Status}}</td>
+							<td>{{job.JobLevel}}</td>
+							<td [class.bg-yellow]="job.MtStatus==2" [class.bg-white]="job.MtStatus==1" [class.bg-green]="job.MtStatus==0" title="{{job.MtTime}}">{{job.MT}}</td>
+							<td [class.bg-yellow]="job.AqaStatus==2" [class.bg-white]="job.AqaStatus==1" [class.bg-green]="job.AqaStatus==0" title="{{job.AqaTime}}">{{job.AQA}}</td>
+							<td [class.bg-yellow]="job.QaStatus==2" [class.bg-white]="job.QaStatus==1" [class.bg-green]="job.QaStatus==0" title="{{job.QaTime}}">{{job.QA}}</td>
+							<td [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1" [class.bg-green]="job.Color==0">{{job.TAT}}</td>
+							<td [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1" [class.bg-green]="job.Color==0">{{job.JobStatus.replace('Pending ', '')}}</td>
 						</tr>
 					</tbody>
 				</table>
