--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -17,13 +17,9 @@
 						<img src="../images/logo.png" alt="">
 					</div>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input-container> <input mdInput class="" autocomplete="off" name="username" #username placeholder="Username/Email" [(ngModel)]="passwordModel.Username"
-								 type="text" required></md-input-container>
-						</div>
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input-container> <input mdInput class="" autocomplete="off" name="password" #password placeholder="Password" [(ngModel)]="passwordModel.Password"
+							<md-input-container> <input mdInput class="" autocomplete="off" name="password" #password placeholder="Password" [(ngModel)]="passwordModel.NewPassword"
 								 type="password" required></md-input-container>
 						</div>
 
