--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -80,7 +80,7 @@
               </div>
 
               <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-                <input  type="file" ng2FileSelect [uploader]="uploader" multiple/>
+                <input #file  type="file" ng2FileSelect [uploader]="uploader" name="patient_list_files" multiple required/>
               </div>
 
               <div class="col-md-1 col-sm-6 col-lg-1 col-xs-12">
